# windows-folder-remark

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.en.md  README.md  README.zh-CN.md  README.zh.md  babel.cfg  desktop.ini  messages.pot  package-lock.json  package.json  pyproject.toml  readme.md  remark.py  remark.spec  requirements.txt  setup.py
.github/: release-drafter.yml
.github/workflows/: auto-tag.yml  deploy-docs.yml  pull_request.yml  release-drafter.yml  release.yml  test.yml
docs/: index.md  robots.txt
docs/.vitepress/: config.mjs
docs/en/: index.md
docs/en/guide/: api.md  getting-started.md  usage.md
docs/guide/: api.md
docs/zh/: index.md
docs/zh/guide/: getting-started.md  usage.md
locale/zh/LC_MESSAGES/: messages.mo  messages.po
release/: desktop.ini
release/FolderRemark/: desktop.ini
release/FolderRemark/folder.dot/: desktop.ini
release/FolderRemark/test.t/: desktop.ini
remark/: __init__.py  i18n.py
remark/cli/: __init__.py  __main__.py  commands.py
remark/core/: __init__.py  base.py  file_handler.py  folder_handler.py
remark/gui/: __init__.py  remark_dialog.py
remark/storage/: __init__.py  desktop_ini.py
remark/utils/: __init__.py  constants.py  encoding.py  path_resolver.py  platform.py  registry.py  updater.py
scripts/: __init__.py  analyze_exe_size.py  build.py  check_i18n.py  ensure_upx.py  release.py
testfolder.dot/: desktop.ini
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  conftest.py  test_encoding_handling.py
tests/unit/: __init__.py  test_cli_commands.py  test_desktop_ini.py  test_folder_handler.py  test_i18n.py  test_path_resolver.py  test_platform.py  test_registry.py  test_release.py  test_updater.py
tests/windows/: __init__.py  test_context_menu.py  test_full_workflow.py
